raw/tuple-stress--2016-12-05-19-47-36--5.log
commit 09991241fd75ec69281d06c8f907d2e9f61ac5e2
Merge: daf8c1d c735d7f
Author: bors <bors@rust-lang.org>
Date:   Tue Dec 6 00:17:24 2016 +0000

    Auto merge of #38121 - jonathandturner:better_e0061, r=nikomatsakis
    
    Point arg num mismatch errors back to their definition
    
    This PR updates the arg num errors (like E0061) to point back at the function definition where they were defined.
    
    Before:
    
    ```
    error[E0061]: this function takes 2 parameters but 1 parameter was supplied
      --> E0061.rs:18:7
       |
    18 |     f(0);
       |       ^
       |
       = note: the following parameter types were expected:
       = note: u16, &str
    ```
    
    Now:
    
    ```
    error[E0061]: this function takes 2 parameters but 1 parameter was supplied
      --> E0061.rs:18:7
       |
    11 | fn f(a: u16, b: &str) {}
       | ------------------------ defined here
    ...
    18 |     f(0);
       |       ^ expected 2 parameters
    ```
    
    This is an incremental improvement.  We probably want to underline only the function name and also have support for functions defined in crates outside of the current crate.
    
    r? @nikomatsakis
rustc: ./tuple-stress
cargo rustc  -- -Ztime-passes -Zinput-stats
time: 0.407; rss: 136MB	parsing
Lines of code:             65571
Pre-expansion node count:  393241
time: 0.000; rss: 136MB	recursion limit
time: 0.000; rss: 136MB	crate injection
time: 0.000; rss: 136MB	plugin loading
time: 0.000; rss: 136MB	plugin registration
time: 0.093; rss: 158MB	expansion
time: 0.000; rss: 158MB	maybe building test harness
time: 0.005; rss: 158MB	maybe creating a macro crate
Post-expansion node count: 393303
time: 0.000; rss: 158MB	checking for inline asm in case the target doesn't support it
time: 0.005; rss: 158MB	complete gated feature checking
time: 0.033; rss: 158MB	early lint checks
time: 0.005; rss: 158MB	AST validation
time: 0.011; rss: 158MB	name resolution
time: 0.031; rss: 202MB	lowering ast -> hir
time: 0.008; rss: 218MB	indexing hir
time: 0.005; rss: 218MB	attribute checking
time: 0.002; rss: 141MB	language item collection
time: 0.002; rss: 141MB	lifetime resolution
time: 0.000; rss: 141MB	looking for entry point
time: 0.000; rss: 141MB	looking for plugin registrar
time: 0.050; rss: 163MB	region resolution
time: 0.002; rss: 163MB	loop checking
time: 0.004; rss: 163MB	static item recursion checking
time: 0.209; rss: 163MB	compute_incremental_hashes_map
time: 0.000; rss: 163MB	load_dep_graph
time: 0.002; rss: 163MB	stability index
time: 0.002; rss: 163MB	stability checking
time: 0.002; rss: 163MB	type collecting
time: 0.000; rss: 163MB	variance inference
time: 0.000; rss: 163MB	impl wf inference
time: 0.003; rss: 165MB	coherence checking
time: 0.002; rss: 165MB	wf checking
time: 0.591; rss: 209MB	item-types checking
time: 0.003; rss: 209MB	item-bodies checking
time: 0.000; rss: 209MB	drop-impl checking
time: 0.172; rss: 213MB	const checking
time: 0.004; rss: 213MB	privacy checking
time: 0.002; rss: 213MB	intrinsic checking
time: 0.002; rss: 213MB	effect checking
time: 0.000; rss: 213MB	match checking
time: 0.003; rss: 213MB	liveness checking
time: 0.002; rss: 213MB	rvalue checking
time: 0.293; rss: 276MB	MIR dump
  time: 0.000; rss: 276MB	SimplifyCfg
  time: 0.012; rss: 276MB	QualifyAndPromoteConstants
  time: 0.037; rss: 276MB	TypeckMir
  time: 0.000; rss: 276MB	SimplifyBranches
  time: 0.000; rss: 276MB	SimplifyCfg
time: 0.049; rss: 276MB	MIR cleanup and validation
time: 0.004; rss: 276MB	borrow checking
time: 0.000; rss: 276MB	reachability checking
time: 0.004; rss: 276MB	death checking
time: 0.000; rss: 276MB	unused lib feature checking
time: 0.180; rss: 276MB	lint checking
time: 0.001; rss: 276MB	resolving dependency formats
  time: 0.000; rss: 276MB	NoLandingPads
  time: 0.000; rss: 276MB	SimplifyCfg
  time: 0.007; rss: 276MB	EraseRegions
  time: 0.000; rss: 276MB	AddCallGuards
  time: 0.000; rss: 276MB	ElaborateDrops
  time: 0.000; rss: 276MB	NoLandingPads
  time: 0.000; rss: 276MB	SimplifyCfg
  time: 0.006; rss: 276MB	InstCombine
  time: 0.000; rss: 276MB	Deaggregator
  time: 0.000; rss: 276MB	CopyPropagation
  time: 0.009; rss: 276MB	SimplifyLocals
  time: 0.000; rss: 276MB	AddCallGuards
  time: 0.000; rss: 276MB	PreTrans
time: 0.023; rss: 276MB	MIR optimisations
  time: 0.000; rss: 276MB	write metadata
  time: 0.006; rss: 276MB	translation item collection
  time: 0.000; rss: 276MB	codegen unit partitioning
  time: 0.000; rss: 306MB	internalize symbols
time: 0.305; rss: 306MB	translation
time: 0.000; rss: 306MB	assert dep graph
time: 0.000; rss: 306MB	serialize dep graph
  time: 0.022; rss: 128MB	llvm function passes [0]
  time: 0.000; rss: 128MB	llvm module passes [0]
  time: 0.321; rss: 124MB	codegen passes [0]
  time: 0.000; rss: 124MB	codegen passes [0]
time: 0.345; rss: 124MB	LLVM passes
time: 0.000; rss: 124MB	serialize work products
  time: 0.080; rss: 92MB	running linker
time: 0.081; rss: 92MB	linking
done
